2004-12-09  Francois Dumont  <dums@stlport...>

	* stlport/stl/_messages_facets.h: fixed messages_base::catalog from long typedef
	to int thanks Ulrich Eckhardt report.

2004-12-01  Petr Ovtchenkov  <ptr@island...>

	* stlport/stdexcept: removes some warnings regarding the exception class being derived
	from a non-dll interface class on evc4. Michael Fink contribution.

	* stlport/stl/_cmath.h: push/pop warning level for VCs. Michael Fink contribution.

	* src/_stdio_file.h: Evc4 uses an ugly hack to implement file IO using a FILECE structure
	representing the internal FILE structure. For evc3 Michael Fink implemented a much simpler
	way that also works for evc4.

	* stlport/config/stl_evc.h, stl_msvc.h, stlcomp.h: separate config stuff for stl_evc.h
	and stl_msvc.h. Now all Windows CE specific defines are in stl_evc.h only.
	Michael Fink contribution.

	* stlport/stl/_codecvt.h, _ctype.h, _messages_facets.h, _monetary.h: add friend class
	_Locale_impl.

	* stlport/stl/_num_get.h, _num_put.h, _numpunct.h, _time_facets.h: ditto.



2004-11-30  Petr Ovtchenkov  <ptr@island...>

	* src/explore/configure.bat: added quotes. Thanks Ulrich Eckhardt and Michael Fink.

	* stlport/stl/_locale.h, src/locale_impl.h, src/locale_impl.cpp: added _STLP_DECLSPEC
	and _STLP_CALL for some functions. Thanks Ulrich Eckhardt.

	* stlport/stl/_collate.h, _numpunct.h, _monetary.h, _codecvt.h, _time_facets.h:
	_Locale_imp made friend without relation to _STLP_LEAKS_PEDANTIC. Thanks Ulrich Eckhardt.

	* stlport/stl/_locale.h: remove body of protected constructor to avoid warnings.
	Thanks Kidman and Ulrich Eckhardt.

	* src/locale_impl.cpp: use simple resize of facets_vec; reserve space for facets_vec to be
	sure that allocation don't throw exception during vector resize in insert_*_facets functions.
	Thanks Ulrich Eckhardt.


2004-11-29  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_cmath.h: patch from Michael Fink applied.
